--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -36,8 +36,8 @@ jobs:
 
     - name: Copy files
       run: |
-        cp -r ../public/* app/www/
-        cd ..
+        cp -r public/* app/www/
+        cd app
 
     - name: Build APK
       run: |
