--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,10 +1,17 @@
 name: Build APK
 
 on:
-  workflow_dispatch: # Permite ejecutar manualmente
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      html:
+        description: 'HTML file content'
+        required: true
+      css:
+        description: 'CSS file content'
+        required: false
+      js:
+        description: 'JS file content'
+        required: false
 
 jobs:
   build:
@@ -36,7 +43,9 @@ jobs:
 
     - name: Copy files
       run: |
-        cp -r public/* app/www/
+        echo "${{ github.event.inputs.html }}" > app/www/index.html
+        echo "${{ github.event.inputs.css }}" > app/www/styles.css
+        echo "${{ github.event.inputs.js }}" > app/www/script.js
         cd app
 
     - name: Build APK
