--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -53,8 +53,13 @@ jobs:
         cd app
         cordova build android
 
-    - name: Upload APK
+    - name: Zip project folder
+      run: |
+        cd app
+        zip -r ../app.zip ./*
+
+    - name: Upload ZIP as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: app-debug.apk
-        path: app/platforms/android/app/build/outputs/apk/debug/app-debug.apk
+        name: app.zip
+        path: app.zip
