--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -35,15 +35,8 @@ jobs:
     - name: Install Cordova
       run: npm install -g cordova
 
-    - name: Install Android SDK
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y --no-install-recommends android-sdk
-
-    - name: Set up Android environment variables
-      run: |
-        echo "ANDROID_HOME=/usr/lib/android-sdk" >> $GITHUB_ENV
-        echo "PATH=$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH" >> $GITHUB_ENV
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v3
 
     - name: Accept Android licenses
       run: |
