--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,4 +1,4 @@
-name: Build Android Studio Project and Generate APK
+name: Build Android Studio Project
 
 on:
   workflow_dispatch:
@@ -43,28 +43,15 @@ jobs:
 
     - name: Copy files
       run: |
-        mkdir -p app/www
         echo "${{ github.event.inputs.html }}" > app/www/index.html
-        if [ -n "${{ github.event.inputs.css }}" ]; then
-          echo "${{ github.event.inputs.css }}" > app/www/styles.css
-        fi
-        if [ -n "${{ github.event.inputs.js }}" ]; then
-          echo "${{ github.event.inputs.js }}" > app/www/script.js
-        fi
+        echo "${{ github.event.inputs.css }}" > app/www/styles.css
+        echo "${{ github.event.inputs.js }}" > app/www/script.js
         cd app
 
     - name: Prepare Android project
       run: |
         cd app
         cordova prepare android
-
-    - name: Fix Android project structure for Android Studio
-      run: |
-        cd app/platforms/android
-        mkdir -p app/src/main/assets/www
-        cp -r ../../../app/www/* app/src/main/assets/www/
-        rm -rf cordova
-        rm -rf CordovaLib
 
     - name: Zip Android Studio project
       run: |
@@ -76,14 +63,3 @@ jobs:
       with:
         name: android-studio-project.zip
         path: android-studio-project.zip
-
-    - name: Build APK
-      run: |
-        cd app
-        cordova build android --release
-
-    - name: Upload APK as artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-release.apk
-        path: app/platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk
