--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,91 +1,175 @@
-name: Build Android Studio Project and Generate APK
+name: Build APK
 on:
   workflow_dispatch:
     inputs:
       html:
-        description: 'HTML file content'
+        description: 'HTML content'
         required: true
       css:
-        description: 'CSS file content'
+        description: 'CSS content'
         required: false
       js:
-        description: 'JS file content'
+        description: 'JavaScript content'
         required: false
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '14'
-        
-    - name: Set up Java 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        
-    - name: Set up Android SDK
-      uses: android-actions/setup-android@v2
-      
-    - name: Install Cordova
-      run: npm install -g cordova
-      
-    - name: Create Cordova project
-      run: |
-        cordova create app com.example.app App
-        cd app
-        cordova platform add android
-        
-    - name: Copy files
-      run: |
-        echo "${{ github.event.inputs.html }}" > app/www/index.html
-        echo "${{ github.event.inputs.css }}" > app/www/css/styles.css
-        echo "${{ github.event.inputs.js }}" > app/www/js/script.js
-        
-    - name: Install Cordova dependencies
-      run: |
-        cd app
-        npm install
-        
-    - name: Prepare Android project
-      run: |
-        cd app
-        cordova prepare android
-        
-    - name: Build APK
-      run: |
-        cd app
-        cordova build android --release
-        
-    - name: Debug - Show directory structure
-      run: |
-        cd app/platforms/android
-        echo "====== Current Directory ======"
-        pwd
-        echo "====== Directory Structure ======"
-        ls -R
-        echo "====== Finding APK files ======"
-        find . -name "*.apk"
-        
-    - name: Create Android Studio project archive
-      run: |
-        cd app/platforms/android
-        zip -r ../../../android-studio-project.zip .
-        
-    - name: Upload Android Studio project
-      uses: actions/upload-artifact@v4
-      with:
-        name: android-studio-project
-        path: android-studio-project.zip
-        
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: android-apk
-        path: app/platforms/android/ant-build/*.apk
+      - uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+
+      - name: Create Android project
+        run: |
+          # Crear estructura del proyecto
+          mkdir -p AndroidApp/app/src/main/assets
+          mkdir -p AndroidApp/app/src/main/java/com/webview/app
+          mkdir -p AndroidApp/app/src/main/res/layout
+          mkdir -p AndroidApp/app/src/main/res/values
+
+          # Crear archivos web
+          echo "${{ github.event.inputs.html }}" > AndroidApp/app/src/main/assets/index.html
+          echo "${{ github.event.inputs.css }}" > AndroidApp/app/src/main/assets/styles.css
+          echo "${{ github.event.inputs.js }}" > AndroidApp/app/src/main/assets/script.js
+
+          # Crear build.gradle raíz
+          cat > AndroidApp/build.gradle << 'EOL'
+          buildscript {
+              repositories {
+                  google()
+                  mavenCentral()
+              }
+              dependencies {
+                  classpath 'com.android.tools.build:gradle:7.0.4'
+              }
+          }
+
+          allprojects {
+              repositories {
+                  google()
+                  mavenCentral()
+              }
+          }
+          EOL
+
+          # Crear settings.gradle
+          echo "include ':app'" > AndroidApp/settings.gradle
+
+          # Crear build.gradle del módulo app
+          cat > AndroidApp/app/build.gradle << 'EOL'
+          plugins {
+              id 'com.android.application'
+          }
+
+          android {
+              compileSdkVersion 31
+              defaultConfig {
+                  applicationId "com.webview.app"
+                  minSdkVersion 21
+                  targetSdkVersion 31
+                  versionCode 1
+                  versionName "1.0"
+              }
+              buildTypes {
+                  release {
+                      minifyEnabled false
+                      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+                  }
+              }
+          }
+
+          dependencies {
+              implementation 'androidx.appcompat:appcompat:1.4.1'
+              implementation 'com.google.android.material:material:1.5.0'
+          }
+          EOL
+
+          # Crear MainActivity
+          cat > AndroidApp/app/src/main/java/com/webview/app/MainActivity.java << 'EOL'
+          package com.webview.app;
+
+          import android.os.Bundle;
+          import android.webkit.WebView;
+          import android.webkit.WebViewClient;
+          import androidx.appcompat.app.AppCompatActivity;
+
+          public class MainActivity extends AppCompatActivity {
+              @Override
+              protected void onCreate(Bundle savedInstanceState) {
+                  super.onCreate(savedInstanceState);
+                  WebView webView = new WebView(this);
+                  webView.getSettings().setJavaScriptEnabled(true);
+                  webView.setWebViewClient(new WebViewClient());
+                  setContentView(webView);
+                  webView.loadUrl("file:///android_asset/index.html");
+              }
+          }
+          EOL
+
+          # Crear AndroidManifest.xml
+          cat > AndroidApp/app/src/main/AndroidManifest.xml << 'EOL'
+          <?xml version="1.0" encoding="utf-8"?>
+          <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+              package="com.webview.app">
+              <application
+                  android:allowBackup="true"
+                  android:icon="@mipmap/ic_launcher"
+                  android:label="Web App"
+                  android:supportsRtl="true"
+                  android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+                  <activity
+                      android:name=".MainActivity"
+                      android:exported="true">
+                      <intent-filter>
+                          <action android:name="android.intent.action.MAIN" />
+                          <category android:name="android.intent.category.LAUNCHER" />
+                      </intent-filter>
+                  </activity>
+              </application>
+          </manifest>
+          EOL
+
+          # Crear archivo de recursos
+          cat > AndroidApp/app/src/main/res/values/styles.xml << 'EOL'
+          <?xml version="1.0" encoding="utf-8"?>
+          <resources>
+              <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+              </style>
+          </resources>
+          EOL
+
+      - name: Setup Gradle
+        run: |
+          cd AndroidApp
+          mkdir -p gradle/wrapper
+          wget https://services.gradle.org/distributions/gradle-7.0.2-bin.zip -P gradle/wrapper/
+          cat > gradle/wrapper/gradle-wrapper.properties << 'EOL'
+          distributionBase=GRADLE_USER_HOME
+          distributionPath=wrapper/dists
+          distributionUrl=https\://services.gradle.org/distributions/gradle-7.0.2-bin.zip
+          zipStoreBase=GRADLE_USER_HOME
+          zipStorePath=wrapper/dists
+          EOL
+          
+          cat > gradlew << 'EOL'
+          #!/usr/bin/env sh
+          exec gradle "$@"
+          EOL
+          
+          chmod +x gradlew
+
+      - name: Build APK
+        run: |
+          cd AndroidApp
+          ./gradlew assembleDebug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-debug
+          path: AndroidApp/app/build/outputs/apk/debug/app-debug.apk
