--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -33,63 +33,57 @@ jobs:
           echo "${{ github.event.inputs.css }}" > AndroidApp/app/src/main/assets/styles.css
           echo "${{ github.event.inputs.js }}" > AndroidApp/app/src/main/assets/script.js
 
-          # settings.gradle
-          cat > AndroidApp/settings.gradle << 'EOL'
-          rootProject.name = 'AndroidApp'
-          include ':app'
+          # settings.gradle.kts
+          cat > AndroidApp/settings.gradle.kts << 'EOL'
+          rootProject.name = "AndroidApp"
+          include(":app")
           EOL
 
-          # build.gradle del proyecto
-          cat > AndroidApp/build.gradle << 'EOL'
+          # build.gradle.kts del proyecto
+          cat > AndroidApp/build.gradle.kts << 'EOL'
           buildscript {
               repositories {
                   google()
                   mavenCentral()
               }
               dependencies {
-                  classpath 'com.android.tools.build:gradle:7.3.1'
-              }
-          }
-
-          allprojects {
-              repositories {
-                  google()
-                  mavenCentral()
+                  classpath("com.android.tools.build:gradle:8.1.0")
               }
           }
           EOL
 
-          # build.gradle de la app
-          cat > AndroidApp/app/build.gradle << 'EOL'
+          # build.gradle.kts de la app
+          cat > AndroidApp/app/build.gradle.kts << 'EOL'
           plugins {
-              id 'com.android.application'
+              id("com.android.application")
           }
 
           android {
-              compileSdkVersion 33
+              namespace = "com.webview.app"
+              compileSdk = 34
               
               defaultConfig {
-                  applicationId "com.webview.app"
-                  minSdkVersion 21
-                  targetSdkVersion 33
-                  versionCode 1
-                  versionName "1.0"
+                  applicationId = "com.webview.app"
+                  minSdk = 21
+                  targetSdk = 34
+                  versionCode = 1
+                  versionName = "1.0"
               }
               
               buildTypes {
                   release {
-                      minifyEnabled false
+                      isMinifyEnabled = false
                   }
               }
               
               compileOptions {
-                  sourceCompatibility JavaVersion.VERSION_11
-                  targetCompatibility JavaVersion.VERSION_11
+                  sourceCompatibility = JavaVersion.VERSION_17
+                  targetCompatibility = JavaVersion.VERSION_17
               }
           }
 
           dependencies {
-              implementation 'androidx.appcompat:appcompat:1.6.1'
+              implementation("androidx.appcompat:appcompat:1.6.1")
           }
           EOL
 
@@ -118,8 +112,7 @@ jobs:
           # AndroidManifest.xml
           cat > AndroidApp/app/src/main/AndroidManifest.xml << 'EOL'
           <?xml version="1.0" encoding="utf-8"?>
-          <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-              package="com.webview.app">
+          <manifest xmlns:android="http://schemas.android.com/apk/res/android">
               <application
                   android:allowBackup="true"
                   android:label="Web App"
@@ -145,22 +138,14 @@ jobs:
           EOL
 
       - name: Setup Gradle
-        run: |
-          cd AndroidApp
-          # Create gradlew script
-          cat > gradlew << 'EOL'
-          #!/bin/sh
-          exec gradle "$@"
-          EOL
-          chmod +x gradlew
-          
-          # Create gradle wrapper
-          gradle wrapper
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.5
 
       - name: Build Debug APK
         run: |
           cd AndroidApp
-          ./gradlew assembleDebug --stacktrace
+          gradle assembleDebug --warning-mode all
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
