--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -56,6 +56,14 @@ jobs:
                   google()
                   mavenCentral()
               }
+
+              configurations.all {
+                  resolutionStrategy {
+                      force("org.jetbrains.kotlin:kotlin-stdlib:1.8.22")
+                      force("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22")
+                      force("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22")
+                  }
+              }
           }
           EOL
 
@@ -100,8 +108,15 @@ jobs:
           }
 
           dependencies {
-              implementation("androidx.appcompat:appcompat:1.6.1")
-              implementation("androidx.core:core-ktx:1.12.0")
+              implementation("androidx.appcompat:appcompat:1.6.1") {
+                  exclude(group = "org.jetbrains.kotlin", module = "kotlin-stdlib-jdk7")
+                  exclude(group = "org.jetbrains.kotlin", module = "kotlin-stdlib-jdk8")
+              }
+              implementation("androidx.core:core-ktx:1.12.0") {
+                  exclude(group = "org.jetbrains.kotlin", module = "kotlin-stdlib-jdk7")
+                  exclude(group = "org.jetbrains.kotlin", module = "kotlin-stdlib-jdk8")
+              }
+              implementation("org.jetbrains.kotlin:kotlin-stdlib:1.8.22")
           }
 
           repositories {
